add test case with ads

--- a/brightcove-android-error/index.html
+++ b/brightcove-android-error/index.html
@@ -33,6 +33,7 @@
     <h2>Some more information</h2>
     <ul>
     <li><b>IMPORTANT:</b> There are videos in our which do work on the same setup: <a href="old-video.html">old-video.html</a></li>
+    <li>I have created a test case which uses the same player, but has ads: <a href="with-ads.html">with-ads.html</a></li>
     <li>Even when the error occurs, the network traffic shows that the m3u8 file and a working ts file get transmitted via the network. Which means, that the part "or because the format is not supported" of our error message might be the important one.</li>
     <li>Other Brightcove Customers with similar setup have <a href="http://app.handelsblatt.com/video/unternehmen/platooning-auf-deutschen-strassen-gefaehrlich-der-lkw-fahrer-wird-bald-zum-accessoire/14584626.html">working videos</a>.</li>
     <li></li>
