--- a/brightcove-android-error/old-video.html
+++ b/brightcove-android-error/old-video.html
@@ -8,7 +8,7 @@
 <body style="width:90%; max-width: 900px;">
 
     <h1>Brightcove Android Error</h1>
-    <p>Old video with ID 1953013471001, but otherwise the same setup ad the index.html file.</p>
+    <p>Old video with ID "1953013471001", but otherwise the same setup as the index.html file.</p>
 
     <iframe style="width:100%; max-width: 500px;" src='//players.brightcove.net/18140073001/H1kPIpR3_default/index.html?videoId=1953013471001&wmode=transparent&preload=none' allowfullscreen webkitallowfullscreen mozallowfullscreen style="height:230px;width:410px;"></iframe>
 
