--- a/brightcove-android-error/with-ads.html
+++ b/brightcove-android-error/with-ads.html
@@ -8,8 +8,7 @@
 <body style="width:90%; max-width: 900px;">
 
     <h1>Brightcove Android Error</h1>
-
-    <p>Uses player with ID ByebVNPfa, which includes ads. But otherwise the same setup ad the index.html file.</p>
+    <p>Uses player with ID "ByebVNPfa", which includes ads. But otherwise the same setup as the index.html file.</p>
 
     <iframe style="width:100%; max-width: 500px;" src='//players.brightcove.net/18140073001/ByebVNPfa_default/index.html?videoId=5088202182001&wmode=transparent&preload=none' allowfullscreen webkitallowfullscreen mozallowfullscreen style="height:230px;width:410px;"></iframe>
 
