--- a/bph-faq-a11y/index.html
+++ b/bph-faq-a11y/index.html
@@ -2,11 +2,43 @@
 <html>
 <head>
 	<title>BPhil FAQ</title>
+	<style>
+	.clearfix:after,.clearfix:before {
+		content: " ";
+		display: table
+	}
+	.clearfix:after {
+		clear: both
+	}
+
+	.main-content {
+		margin: 15px auto;
+		max-width: 960px;
+		min-width: 320px;
+		padding: 35px 40px 45px;
+	}
+
+	.content-row.border-top {
+		border-top: 1px solid #767676;
+		padding-top: 1em;
+	}
+	@media only screen and (min-width: 675px) {
+		.content {
+			float: left;
+		}
+		.main-content.content-page .content-row .content.w30 {
+	    	width: 26%;
+		}
+		.main-content.content-page .content-row .content.w70 {
+	    	width: 66%;
+		}
+	}
+	</style>
 </head>
 <body>
 	<main class="main-content content-page ">
 		<h1>Häufige Fragen und Anworten</h1>
-		
+
 	</main>
 
 
@@ -19,102 +51,98 @@ document.addEventListener('DOMContentLoaded', function() {
 		categoryID = '200102058',
 		sections = {};
 
-var sectionsXHR = $.ajax({
-	type: 'GET',
-	url: 'https://bphil.zendesk.com/api/v2/help_center/' + language + '/categories/' + categoryID +'/sections.json?per_page=100',
-	dataType: 'json'
-});
-var articlesXHR = $.ajax({
-	type: 'GET',
-	url: 'https://bphil.zendesk.com/api/v2/help_center/' + language + '/categories/' + categoryID + '/articles.json?per_page=100',
-	dataType: 'json'
-});
-
-var addContentRow = function (contentLeft, contentRight) {
-	return '<section class="content-row border-top clearfix">' +
-	'<article class="content left w30 clearfix">' + contentLeft + '</article>' +
-	'<article class="content w70 clearfix">' + contentRight + '</article></section>';
-};
-
-var addTogglerMarkup = function (headline, content) {
-	return '<section class="toggler closed small clearfix">' +
-	'<header><h3 class="toggler-headline light font-icon open-small-toggler">' + headline + '</h3></header>' +
-	'<article class="toggler-content">' + content + '</article></section>';
-};
-
-var addHelpContent = function (sections) {
-	var helpContentMarkUp = '',
-		sectionTitle,
-		sectionContent,
-		section,
-		article;
-
-	$.each(sections, function (key) {
-	section = sections[key];
-
-	if (section.name && section.articles.length) {
-	sectionTitle = '<h3>' + section.name + '</h3>';
-	sectionContent = '';
-
-	for (var i = 0; i < section.articles.length; i++) {
-	article = section.articles[i];
-
-	if (article.name) {
-
-	sectionContent += addTogglerMarkup(article.name, article.body);
-	}
-	}
-
-	helpContentMarkUp += addContentRow(sectionTitle, sectionContent);
-	}
+	var sectionsXHR = $.ajax({
+		type: 'GET',
+		url: 'https://bphil.zendesk.com/api/v2/help_center/' + language + '/categories/' + categoryID +'/sections.json?per_page=100',
+		dataType: 'json'
+	});
+	var articlesXHR = $.ajax({
+		type: 'GET',
+		url: 'https://bphil.zendesk.com/api/v2/help_center/' + language + '/categories/' + categoryID + '/articles.json?per_page=100',
+		dataType: 'json'
 	});
 
-	$('.main-content').append(helpContentMarkUp);
-
-	//$('.toggler').createToggler();
-};
-
-$.when(sectionsXHR, articlesXHR).done(function(sectionData, articleData) {
-	var sortedSections = [],
-	section,
-	article,
-	i;
-
-	for (i = 0; i < sectionData[0].sections.length; i++) {
-	section = sectionData[0].sections[i];
-
-	sections[section.id] = {
-	id: section.id,
-	ranking: i,
-	name: section.name,
-	articles: []
+	var addContentRow = function (contentLeft, contentRight) {
+		return '<section class="content-row border-top clearfix">' +
+		'<article class="content left w30 clearfix">' + contentLeft + '</article>' +
+		'<article class="content w70 clearfix">' + contentRight + '</article></section>';
 	};
-	}
 
-	for (i = 0; i < articleData[0].articles.length; i++) {
-	article = articleData[0].articles[i];
-	section = sections[article.section_id];
+	var addTogglerMarkup = function (headline, content) {
+		return '<section class="toggler closed small clearfix">' +
+		'<header><h3 class="toggler-headline light font-icon open-small-toggler">' + headline + '</h3></header>' +
+		'<article class="toggler-content">' + content + '</article></section>';
+	};
 
-	if (section) {
-	section.articles.push({
-	id: article.id,
-	section_id: article.section_id,
-	name: article.name,
-	title: article.title,
-	body: article.body
+	var addHelpContent = function (sections) {
+		var helpContentMarkUp = '',
+			sectionTitle,
+			sectionContent,
+			section,
+			article;
+
+		$.each(sections, function (key) {
+			section = sections[key];
+
+			if (section.name && section.articles.length) {
+				sectionTitle = '<h2>' + section.name + '</h2>';
+				sectionContent = '';
+
+				for (var i = 0; i < section.articles.length; i++) {
+					article = section.articles[i];
+					if (article.name) {
+						sectionContent += addTogglerMarkup(article.name, article.body);
+					}
+				}
+				helpContentMarkUp += addContentRow(sectionTitle, sectionContent);
+			}
+		});
+
+		$('.main-content').append(helpContentMarkUp);
+
+		//$('.toggler').createToggler();
+	};
+
+	$.when(sectionsXHR, articlesXHR).done(function(sectionData, articleData) {
+		var sortedSections = [],
+			section,
+			article,
+			i;
+
+		for (i = 0; i < sectionData[0].sections.length; i++) {
+			section = sectionData[0].sections[i];
+
+			sections[section.id] = {
+				id: section.id,
+				ranking: i,
+				name: section.name,
+				articles: []
+			};
+		}
+
+		for (i = 0; i < articleData[0].articles.length; i++) {
+			article = articleData[0].articles[i];
+			section = sections[article.section_id];
+
+			if (section) {
+				section.articles.push({
+					id: article.id,
+					section_id: article.section_id,
+					name: article.name,
+					title: article.title,
+					body: article.body
+				});
+			}
+		}
+
+		for (id in sections) {
+			sortedSections.push(sections[id]);
+		}
+
+		sortedSections.sort(function(a, b) {return a.ranking - b.ranking});
+
+		addHelpContent(sortedSections);
 	});
-	}
-	}
-
-	for (id in sections) {
-	sortedSections.push(sections[id]);
-	}
-
-	sortedSections.sort(function(a, b) {return a.ranking - b.ranking});
-
-	addHelpContent(sortedSections);
-});
-
 
 }, false);
 
